--- a/assets/scss/stylesheet.scss
+++ b/assets/scss/stylesheet.scss
@@ -30,6 +30,7 @@
 
 // Brodcast Detail page css
 @import "podcast-detail";
+
 // podcast page css
 @import "podcast";
 
@@ -38,6 +39,9 @@
 
 // News Room page css
 @import "news-rooms";
+
+// browse page css
+@import "browse-page";
 
 // footer css
 @import "footer";
