--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -187,3 +187,49 @@
 {
   display: none;
 }
+
+// browse page header css start
+.header.header-modofier{
+  .nav__list ul {
+    gap: clamp(20px, 3vw, 45px);
+  }
+  .nav__item.d-flex::after,
+  .view-cart-btn::after
+  {
+    display: none;
+  }
+
+  .view-cart-btn{
+    border: 1px solid #2566F8;
+    padding: 10px 15px;
+    color: #2566F8;
+    border-radius: 4px;
+    background:transparent ;
+    position: relative;
+    transition: 0.4s;
+    &::before{
+      content: '';
+      background-color:#2566F8;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transform: scale(0,1);
+      transform-origin:  right;
+      transition: transform 0.5s;
+      z-index: -1;
+    }
+
+    &:hover{
+      -webkit-text-fill-color: unset;
+      color: #fff;
+      
+    }
+    &:hover::before{
+      transform: scale(1,1);
+      transform-origin:  left;
+    }
+    
+  }
+}
