--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -606,6 +606,9 @@
 }
 
 // index Hero sec Code 
+.globel__sec__img{
+  background-color: #0b0e1e;
+}
 @keyframes qwe{
   0%{
       border-radius: 50%;
