Update Merging Code

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -79,11 +79,11 @@
 /* Deploy Sec Start */
 .tmb__deploy__sec {
   padding: 140px 0 215px;
-  .sec__heading{
+  .sec__heading {
     max-width: 900px;
     width: 100%;
   }
-  .d-none{
+  .d-none {
     display: none;
   }
 }
@@ -225,7 +225,7 @@
 }
 
 /* Testimonial Start */
-.testimonial{
+.testimonial {
   padding: 203px 0 257px;
 }
 .testimonial__grid {
@@ -585,7 +585,7 @@
 }
 .image__wrapper {
   display: inline-block;
-  padding: 0 30px;
+  // padding: 0 30px;
 }
 
 .hero__heading {
