update code of header

--- a/assets/scss/responsive.scss
+++ b/assets/scss/responsive.scss
@@ -87,6 +87,11 @@
       display: none;
     }
   }
+  .tmb__globel__sec .bg__lines,
+  .tmb__hero__sec .connect_hero_global_map
+  {
+    display: none;
+  }
 
   // footer responsive max-width 1200px
   .footer {
