--- a/assets/scss/pResponsive.scss
+++ b/assets/scss/pResponsive.scss
@@ -17,9 +17,12 @@
   }
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 991px) {
   .dropdown {
     display: block;
+  }
+  .globel__sec__img {
+    overflow: hidden;
   }
 }
 
