--- a/assets/scss/indexqwe.scss
+++ b/assets/scss/indexqwe.scss
@@ -496,6 +496,9 @@
     50%{
         transform: scale(0.5);
     }
+    60%{
+        
+    }
     90%{
         transform: rotate(100deg);
         border-radius: 0%;
