--- a/assets/scss/career.scss
+++ b/assets/scss/career.scss
@@ -157,7 +157,7 @@
       .btn.active + .tab__content {
         opacity: 1;
         height: auto;
-        overflow: visible;
+        // overflow: visible;
       }
     }
   }
