--- a/assets/scss/partner.scss
+++ b/assets/scss/partner.scss
@@ -59,6 +59,7 @@
     font-weight: 800;
     line-height: 30px;
     margin-bottom: 40px;
+    transition:0.3s !important;
   }
   .sec__best__solution__items li:hover {
     color: #d4dbfc;
